# Renderer2

./: .gitignore  CMakeLists.txt  CMakeLists_raytracer.txt  CMakeLists_vdb_converter.txt  README.md  cmake_generate.cmd  cmake_generate_linux_minimal.sh  cmake_generate_windows.sh
common/: frame.hpp  pressed_key.hpp
evaluation/: .gitignore  calculate_metrics.py
examples/: config.json  scenedescription.json
raytracer/: CMakeLists.txt  filter.cu  filter.hpp  main.cu  pipeline.cu  pipeline.hpp  raytracer.cpp  raytracer.cu  raytracer.hpp
raytracer/assets/: envmap.hdr  sunflowers_1k_edit.hdr
raytracer/include/backend/: asset_manager.hpp  build_optix_accel.hpp  config_loader.hpp  launch_params.hpp  mesh_loader.hpp  rt_backend.hpp  types.hpp
raytracer/include/camera/: camera.hpp  pixel_sampler.hpp
raytracer/include/filtering/: filtered_data.hpp  launch_params.hpp  mesh_filter.hpp  openvdb_backend.hpp  openvdb_data.hpp  volume_description_manager.hpp
raytracer/include/grid_brick/: buf3d.hpp  common.hpp  device_grid_brick.hpp  device_grid_brick_impl.hpp  host_grid_brick.hpp  serialization.hpp
raytracer/include/integrators/: direct_lighting_integrator.hpp  objects.hpp  path_integrator.hpp  path_integrator_impl.hpp
raytracer/include/intersect/: aabb.hpp  hit_information.hpp  ray.hpp  surface_interaction.hpp
raytracer/include/material/: blinn_phong_brdf.hpp  brdf_functions.hpp  fresnel.hpp  lambertian_brdf.hpp  material.hpp  microfacet_brdf.hpp  microfacet_distribution.hpp  oren_nayar_brdf.hpp  specular_brdf.hpp
raytracer/include/medium/: henyey_greenstein_phase_function.hpp  heterogenous_medium.hpp  homogeneous_medium.hpp  medium.hpp  medium_impl.hpp  medium_instance.hpp  medium_instance_impl.hpp  nvdb_medium.hpp  nvdb_medium_impl.hpp  phase_function.hpp  phase_function_impl.hpp  sggx_phase_function.hpp
raytracer/include/mesh/: mesh.hpp
raytracer/include/sampling/: distribution_1d.hpp  distribution_2d.hpp  mis.hpp  sampler.hpp
raytracer/include/scene/: device_scene.hpp  device_scene_impl.hpp  device_sceneobject.hpp  environmentmap.hpp  interaction.hpp  scene.hpp  sceneobject.hpp  sceneobject_mask.hpp  surface_interaction.hpp  types.hpp
raytracer/include/shapes/: circle.hpp  cuboid.hpp  plane.hpp  rectangle.hpp  shape.hpp  sphere.hpp
raytracer/include/texture/: texture.hpp  texture_manager.hpp
raytracer/include/utility/: debugging.hpp  functions.hpp  luma.hpp  performance_monitoring.hpp  pointer.hpp  qualifiers.hpp
raytracer/src/backend/: asset_manager.cu  build_optix_accel.cu  config_loader.cu  mesh_loader.cu  rt_backend.cu  shaders.optix.cu
raytracer/src/camera/: camera.cpp  camera.cu  pixel_sampler.cu
raytracer/src/filtering/: .gitignore  common_functions.py  generate_random_forest.py  generate_regular_grid.py  openvdb_backend.cpp  random_quads.py  random_quads2.py  random_stack.py  relevant_models.json  relevant_models_backup.json  scenedescription_regular_grid.json  volume_description.json  volume_description_manager.cpp
raytracer/src/grid_brick/: host_grid_brick.cpp  serialization.cpp
raytracer/src/integrators/: direct_lighting_integrator.cu  path_integrator.cu
raytracer/src/intersect/: ray.cpp  ray.cu
raytracer/src/material/: blinn_phong_brdf.cu  fresnel.cu  lambertian_brdf.cu  material.cpp  material.cu  microfacet_brdf.cu  microfacet_distribution.cu  oren_nayar_brdf.cu  specular_brdf.cu
raytracer/src/medium/: henyey_greenstein_phase_function.cu  heterogenous_medium.cu  homogeneous_medium.cu  medium.cu  medium_instance.cu  nvdb_medium.cpp  nvdb_medium.cu  phase_function.cu  sggx_phase_function.cu
raytracer/src/mesh/: mesh.cu
raytracer/src/sampling/: distribution_1d.cu  distribution_2d.cu  sampler.cu
raytracer/src/scene/: environmentmap.cu  scene.cu  sceneobject.cpp  sceneobject.cu  sceneobject_mask.cpp
raytracer/src/shapes/: circle.cu  cuboid.cu  plane.cpp  plane.cu  rectangle.cu  shape.cpp  shape.cu  sphere.cpp  sphere.cu
raytracer/src/texture/: texture.cu  texture_manager.cu
raytracer/src/utility/: debugging.cu  performance_monitoring.cpp
vdb_converter/: CMakeLists.txt  main.cpp
visualisation/: CMakeLists.txt  visualisation.cpp  visualisation.hpp
visualisation/include/: gl_visualiser.hpp  image_writer.hpp
visualisation/src/: gl_visualiser.cpp  image_writer.cpp
